fix scrollbar x

--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -9,6 +9,16 @@ body {
   height: 100%;
 }
 
+body::-webkit-scrollbar {
+  width: 0.3em;
+  background-color: #303030;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #F0CA83;
+  border-radius: 10px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -22,6 +32,7 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
     color: rgb(255, 255, 255);
     background: #252525;
@@ -29,46 +40,40 @@ a {
 }
 
 .colorTextGold {
-  background-image: linear-gradient(
-    to right,
-    #e9a31f 0,
-    #cb9b51 10%, 
-    #f6e27a 25%,
-    #f6f2c0 50%,
-    #f6e27a 75%,
-    #cb9b51 90%,
-    #e9a31f 100%
-    );
+  background-image: linear-gradient(to right,
+      #e9a31f 0,
+      #cb9b51 10%,
+      #f6e27a 25%,
+      #f6f2c0 50%,
+      #f6e27a 75%,
+      #cb9b51 90%,
+      #e9a31f 100%);
   -webkit-background-clip: text;
-  text-shadow: 0px 1px 1px rgba(255, 245, 181, 0.5); 
+  text-shadow: 0px 1px 1px rgba(255, 245, 181, 0.5);
   color: transparent;
 }
 
 .colorBackgroundContentGold {
-  background-image: linear-gradient(
-    to right,
-    #e9a21f5d 0,
-    #cb9a515d 10%, 
-    #f6e17a78 25%,
-    #f6f2c0ad 50%,
-    #f6e27a78 75%,
-    #cb9b515d 90%,
-    #e9a31f5d 100%
-    );
+  background-image: linear-gradient(to right,
+      #e9a21f5d 0,
+      #cb9a515d 10%,
+      #f6e17a78 25%,
+      #f6f2c0ad 50%,
+      #f6e27a78 75%,
+      #cb9b515d 90%,
+      #e9a31f5d 100%);
 }
 
 .colorBackgroundGold {
-  background-image: linear-gradient(
-    to right,
-    #e9a21f5d 0,
-    #cb9a515d 10%, 
-    #f6e17a78 25%,
-    #f6f2c0ad 50%,
-    #f6e27a78 75%,
-    #cb9b515d 90%,
-    #e9a31f5d 100%
-    );
-    
+  background-image: linear-gradient(to right,
+      #e9a21f5d 0,
+      #cb9a515d 10%,
+      #f6e17a78 25%,
+      #f6f2c0ad 50%,
+      #f6e27a78 75%,
+      #cb9b515d 90%,
+      #e9a31f5d 100%);
+
 }
 
 .hide-scroll {
@@ -114,11 +119,11 @@ a {
   transition: all 0.4s ease-in-out 0s;
 }
 
-.content:hover .content-overlay{
+.content:hover .content-overlay {
   opacity: 1;
 }
 
-.content-image{
+.content-image {
   width: 100%;
 }
 
@@ -139,13 +144,13 @@ a {
   transition: all 0.3s ease-in-out 0s;
 }
 
-.content:hover .content-details{
+.content:hover .content-details {
   top: 50%;
   left: 50%;
   opacity: 1;
 }
 
-.fadeIn-bottom{
+.fadeIn-bottom {
   top: 80%;
 }
 
